fixed spacing issues on smaller screen size

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -369,6 +369,7 @@ nav {
 
     h1.title {
       font-size: 2em;
+      padding-top: 30%;
     }
     h2 {
       font-size: 1.5em;
@@ -392,11 +393,12 @@ nav {
   }
  
   .scroll-btn {
-    width: 50%;
+    width: 70%;
   }
 
   .project {
     border: none;
+    height: auto;
   }
  
 }
